src/sass/style.scss
/* ... */
.sidebar-modal .modal.right.fade.show .modal-dialog {
  right: 0;
  -webkit-animation: fadeInRight 0.6s linear;
  animation: fadeInRight 0.6s linear;
}
.sidebar-modal .modal.right.fade .modal-dialog {
  right: 0;
}
/*=================================
Navbar Area End
====================================*/

/*=================================
Home Slider
====================================*/
.home-slider {
  position: relative;
  .slider-item {
    position: relative;
    z-index: 1;
    background-position: center center;
    background-repeat: no-repeat;
    background-size: cover;
    height: 850px;
    .slider-text {
      h1 {
        font-size: 60px;
        color: $color-white;
        max-width: 735px;
        font-weight: 500;
        // text-shadow: stroke(3px, $main-color);
      }
      p {
        margin-top: 24px;
        color: $color-white;
        max-width: 600px;
        // text-shadow: stroke(2px, $main-color);
      }
      .slider-btn {
        margin-top: 41px;
        margin-bottom: 10px;
      }
    }
  }
  .owl-theme {
    .owl-dots {
      position: absolute;
      top: 50%;
      right: 8%;
      transform: translateY(-50px);
      .owl-dot {
        display: grid;
        span {
          background-color: transparent;
          width: 15px;
          height: 15px;
          -webkit-transition: all 0.5s;
          transition: all 0.5s;
          border: 1px solid $color-white;
          border-radius: 50%;
        }
        &:hover span {
          background-color: $color-white !important;
        }
        &.active span {
          background-color: $color-white !important;
        }
      }
    }
  }
}
.slider-bg1 {
  background-image: url(../img/home-1/slider1.jpg);
}
.slider-bg2 {
  background-image: url(../img/home-1/slider2.jpg);
}
.slider-bg3 {
  background-image: url(../img/home-1/slider3.jpg);
}
/*=================================
 Home Slider End 
===================================*/

/*=================================
Brand Area 
====================================*/
.brand-area {
  background-color: #fffafa;
  .brand-item {
    text-align: center;
    line-height: 1;
    a {
      img {
        max-width: 100%;
        height: 55px;
      }
    }
  }
}
/*=================================
Brand Area End
====================================*/

/*=================================
About Section 
====================================*/
.about-area {
  background-color: #fffafa;
}
.about-text {
  margin-bottom: 30px;
  .about-btn {
    margin-top: 32px;
  }
}
.about-right {
  margin-bottom: 30px;
  position: relative;
  background-image: url(../img/about/1.jpg);
  background-repeat: no-repeat;
  background-position: center center;
  background-size: cover;
  &::before {
    content: "";
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    right: 0;
    background-color: #000000;
    opacity: 0.7;
  }
  .play-area {
    position: relative;
    padding: 170px 0;
    text-align: center;
    .play-btn {
      color: $color-white;
      font-size: 18px;
      i {
        font-size: 30px;
        margin-right: 10px;
        position: relative;
        top: 4px;
      }
      &:hover {
        color: $main-color;
      }
    }
  }
}
.icon-shape-1 {
  position: absolute;
  top: -75px;
  right: -20px;
  font-size: 75px;
  color: $main-color;
}
.icon-shape-2 {
  position: absolute;
  bottom: -55px;
  left: -20px;
  font-size: 75px;
  color: $color-blue;
}
/*=================================
About Section End
====================================*/

/*=================================
Service Area 
====================================*/
.service-area {
  position: relative;
  .owl-theme {
    .owl-nav {
      position: absolute;
      margin-top: 0;
      top: 50%;
      left: 0;
      right: 0;
      transform: translateY(-33px);
      .owl-prev {
        position: absolute;
        left: -5%;
        width: 40px;
        height: 40px;
        font-size: 20px;
        line-height: 0;
        background-color: #ffeded;
        color: $main-color;
        border-radius: 0;
        -webkit-transition: all 0.5s;
        transition: all 0.5s;
        &:hover {
          background-color: $main-color;
          color: #ffeded;
        }
      }
      .owl-next {
        position: absolute;
        right: -5%;
        width: 40px;
        height: 40px;
        font-size: 20px;
        line-height: 0;
        background-color: #ffeded;
        color: $main-color;
        border-radius: 0;
        -webkit-transition: all 0.5s;
        transition: all 0.5s;
        &:hover {
          background-color: $main-color;
          color: #ffeded;
        }
      }
    }
    .owl-item.active.center {
      .service-item {
        background-image: url(../img/shape/bg-shape.png);
        color: $color-white;
        h3 {
          color: $color-white;
        }
        p {
          color: $color-white;
        }
        .service-item-icon {
          color: $color-white;
        }
      }
    }
  }
}
/* ... */

